@@ -62,12 +62,14 @@ class MemcachedPhpBagOStuff extends MemcachedBagOStuff {
 	public function incr( $key, $value = 1 ) {
 		$this->validateKeyEncoding( $key );
 
-		return $this->client->incr( $key, $value );
+		$ret = $this->client->incr( $key, $value );
+		return $ret !== null ? $ret : false;
 	}
 
 	public function decr( $key, $value = 1 ) {
 		$this->validateKeyEncoding( $key );
 
-		return $this->client->decr( $key, $value );
+		$ret = $this->client->decr( $key, $value );
+		return $ret !== null ? $ret : false;
 	}
 }
